--- a/EnglishWebSimulatorApp/Views/LibraryWordsJson/EndLesson.cshtml
+++ b/EnglishWebSimulatorApp/Views/LibraryWordsJson/EndLesson.cshtml
@@ -86,7 +86,7 @@
             {
                 <h3>@Localizer["Result saved."]</h3>
             }
-            <a class="btn btn-outline-dark m-3" asp-action="MainLessonLibrary" asp-controller="LibraryWordsJson">@Localizer["StringSeven"]</a>
+            <a class="btn btn-outline-dark m-3" href="/">@Localizer["StringSeven"]</a>
             </div>
     </div>
    </div> 
