--- a/EnglishWebSimulatorApp/Views/Home/Index.cshtml
+++ b/EnglishWebSimulatorApp/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
 ﻿<div class="centered-label">
-    <div class="container col-md-7 d-flex flex-sm-wrap-reverse" style="color:blue;"><h1>@Localizer["Header"]</h1></div>
+    <div class="container col-md-7 d-flex flex-sm-wrap-reverse title textFont3"><h1 style ="font-size:50px;">@Localizer["Header"]</h1></div>
 </div>
