--- a/EnglishWebSimulatorApp/wwwroot/css/site.css
+++ b/EnglishWebSimulatorApp/wwwroot/css/site.css
@@ -8,8 +8,19 @@ for details on configuring this project to bundle and minify static web assets. 
     font-family: 'Comic Neue', cursive;
 }
 
+.textFont2 {
+    font-family: 'Oregano', cursive;
+}
+.textFont3 {
+    font-family: 'Caprasimo', cursive;
+}
+
+.style_border {
+    border:1px solid black;
+}
+
 nav {
-    height: 7.5vh;
+    height: 5.5vh;
 }
 
 .centered-label {
@@ -106,7 +117,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  /*margin-bottom: 60px;*/
 }
 .footer {
   position: absolute;
@@ -182,3 +193,13 @@ body {
     background-color: aliceblue;
     border: 1px solid black;
 }
+
+/*Style for admin*/
+
+.bg_admin 
+{
+    background-color:antiquewhite;
+    height:100%;
+    border:1px solid black;
+}
+
