добавил возможность поиска слов по фрагменту введённого пользователем как на кирилеце так и на латинеце, добавил игнорирование регистра как в режине слов пользователя так и режиме слов общего словаря.

--- a/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
+++ b/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
@@ -144,12 +144,8 @@
                                             @Localizer["Dictionary"]
                                         </button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <a class="dropdown-item" asp-controller="LibraryWordsJson"
-                                           asp-action="MainLessonLibrary"
-                                           asp-route-namePage="workout">@Localizer["workout"]</a>
-                                            <a class="dropdown-item" asp-controller="LibraryWordsJson"
-                                           asp-action="MainLessonLibrary"
-                                           asp-route-namePage="knowledgeTesting">@Localizer["KnowledgeTesting"]</a>
+                                            <a class="dropdown-item" href="/LibraryWordsJson/MainLessonLibrary?namePage="workout">@Localizer["workout"]</a>
+                                            <a class="dropdown-item" href="/LibraryWordsJson/MainLessonLibrary?namePage="knowledgeTesting">@Localizer["KnowledgeTesting"]</a>
                                         </div>
                                     </div>
                                 </li>
