--- a/EnglishWebSimulatorApp/Views/Admin/ShowCardsWords.cshtml
+++ b/EnglishWebSimulatorApp/Views/Admin/ShowCardsWords.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LibraryWordsJson
 
 <div class="d-flex justify-content-center align-items-center" style="background:  url(https://catherineasquithgallery.com/uploads/posts/2021-03/1614857389_17-p-fon-okeana-20.jpg)  no-repeat fixed; height:100vh;">
-    <div class="card" style="width: 25rem;">
+    <div class="card" style="width: 22rem;">
         @if (Model.PathPict != null)
         {
-            <img src="~/img/words/@Model.PathPict" class="card-img-top" style="max-height:500px;" alt="...">
+            <img src="~/img/words/@Model.PathPict" class="card-img-top" style="max-height:350px;" alt="...">
         }
         else
         {
@@ -22,23 +22,36 @@
                     <i class="bi bi-filetype-mp3 iconAudio" style="font-size:30px; text-align:center;"></i>
              </li>
             }
-            <li class="list-group-item"><a href="/Admin/ShowCardsWords?id=@Model.Id" class="btn btn-outline-info">Next word</a></li>
-            <li class="list-group-item">
+
+            @if (ViewBag.AutoPlay == null)
+            {
+                <li class="list-group-item"><a href="/Admin/ShowCardsWords?id=@Model.Id" class="btn btn-outline-info">Next word</a></li>
+                <li class="list-group-item">
                 <form method="get" asp-action="ShowCardsWords" asp-controller="Admin">
                     <spam>Id</spam>
                     <input type="number" min="1" name="id" step="1" size="15" />  
                     <input type="text" name="flag" value="flag_id" hidden />
                     <button type="submit" class="btn btn-outline-info">Go to</button>
                 </form>    
-            </li>
-            <li class="list-group-item">
+                </li>
+            }
+
+            @if (User.Identity.Name.ToString() == Role.Admin.ToString())
+            {
+             <li class="list-group-item">
                 <a href="/Admin/AddWordDictionary?objId=@Model.Id" class="btn btn-outline-warning">Update word</a>
             </li>
+            }
+            else
+            {
+               
+            }
         </ul>
     </div>
 </div>
 <script>
     "strict"
+    if (document.querySelector(".iconAudio") != null)
     document.querySelector(".iconAudio").addEventListener("click", ()=>{
         document.querySelector(".testAudio").play();
     });
